# EEGProc

./: .buildinfo  .coveragearc  .coveragerc  .gitignore  README.md  genindex.html  getting-started.html  index.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  requirements.txt  search.html  searchindex.js
.doctrees/: environment.pickle  getting-started.doctree  index.doctree
.doctrees/api/: eegproc.doctree  eegproc.featurization.doctree  eegproc.plotting.doctree  eegproc.plotting.plots.doctree  eegproc.preprocessing.doctree  modules.doctree
.github/workflows/: docs.yml  tests.yml
_modules/: index.html
_modules/eegproc/: featurization.html  preprocessing.html
_modules/eegproc/plotting/: plots.html
_sources/: getting-started.md.txt
_sources/api/: eegproc.featurization.rst.txt  eegproc.plotting.rst.txt  eegproc.preprocessing.rst.txt  modules.rst.txt
api/: eegproc.featurization.html  eegproc.html  eegproc.plotting.html  eegproc.plotting.plots.html  eegproc.preprocessing.html  modules.html
docs/: requirements.txt
docs/source/: conf.py  getting-started.md  getting-started.rst  index.rst
docs/source/api/: eegproc.plotting.plots.rst  eegproc.rst
parameters/: __init__.py  featurization.py  preprocessing.py
src/eegproc/: __init__.py  featurization.py  preprocessing.py
src/eegproc/plotting/: __init__.py  plots.py
src/parameters/: featurization.py
src/tests/: conftest.py  test_featurization.py  test_imf_decomposition.py  test_plot.py  test_preprocessing.py  test_wavelet_features.py  utils.py
