# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eegproc"
version = "1.0.0"
description = "EEG Preprocessing and Featurization Library"
readme = "README.md"
authors = [{ name = "EEGProc", email = "inserra.vitor@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: GNU General Public License v2 (GPLv2)",
    "Programming Language :: Python :: 3",
]
keywords = ["eeg", "entropy", "preprocessing", "featurization", "neuroscience", "vectorization", "dataframes"]
dependencies = [
    "dill>=0.4.0",
    "EMD-signal>=1.6.4",
    "joblib>=1.5.2",
    "multiprocess>=0.70.18",
    "numpy>=2.2.6",
    "pandas>=2.3.2",
    "pathos>=0.3.4",
    "pox>=0.3.6",
    "ppft>=1.7.7",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.2",
    "PyWavelets>=1.8.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "six>=1.17.0",
    "threadpoolctl>=3.6.0",
    "tqdm>=4.67.1",
    "tzdata>=2025.2"
]
requires-python = ">=3"

[project.urls]
Homepage = "https://github.com/VitorInserra/EEGProc"

[tool.bumpver]
current_version = "2025.1001-alpha"
version_pattern = "YYYY.BUILD[-TAG]"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]
"README.md" = [
    "{version}",
    "{pep440_version}",
]

